--- a/main.html
+++ b/main.html
@@ -1,19 +1,21 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Insta</title>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script src ="logic.js"></script>
+	<title>Document</title>
+	<link rel="stylesheet" href="styles.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script src="logic.js"></script>
 </head>
 <body>
-<h1>Popular Pictures</h1>
-<ul class="popular">
-</ul>
-<h1>Latest</h1>
-<span class="name"></span>
-<span class=tagline></span>
-<ul class="latest">
-</ul>
+	<div class="container">
+		<h1>Starwars</h1>
+		<form action="" id="search-form">
+			<input id="query" type="text" name="input-text">
+			<button type="button" class="search-form">SEARCH</button>
+		</form>
+		<div id="search-results"></div>
+	</div>	
 </body>
 </html>
